Fix hero logo overflow

--- a/css/base.css
+++ b/css/base.css
@@ -52,17 +52,29 @@ body::after {
   }
 }
 
+.hero-centre {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: grid;
+  grid-template-columns: 1fr;
+  text-align: center;
+}
+
 .hero-logo {
   background-image: url(../img/logo.webp);
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
+  height: 15rem;
   width: 50rem;
-  height: 50rem;
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  transform: scale(3);
+  -webkit-transform: scale(3);
+  /* position: absolute; */
+  /* top: 40%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
   z-index: 1;
   filter: drop-shadow(black 0 0 3rem);
   animation: pulse 5s infinite;
@@ -72,15 +84,18 @@ body::after {
 
 @keyframes pulse {
   0% {
-    transform: translate(-50%, -50%) scale(1);
+    transform: scale(3);
+    -webkit-transform: scale(3);
   }
   50% {
-    transform: translate(-50%, -50%) scale(1.05);
-    filter: drop-shadow(rgba(230, 137, 43, 0.7) 0 0 8rem);
-    -webkit-filter: drop-shadow(rgba(230, 137, 43, 0.7) 0 0 8rem);
+    transform: scale(3.15);
+    -webkit-transform: scale(3.15);
+    filter: drop-shadow(rgba(230, 137, 43, 0.7) 0 0 3rem);
+    -webkit-filter: drop-shadow(rgba(230, 137, 43, 0.7) 0 0 3rem);
   }
   100% {
-    transform: translate(-50%, -50%) scale(1);
+    transform: scale(3);
+    -webkit-transform: scale(3);
   }
 }
 
@@ -90,10 +105,10 @@ body::after {
   font-weight: 400;
   letter-spacing: 0.7rem;
   text-shadow: black 0 0 1rem;
-  position: absolute;
-  top: 52%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  /* position: absolute; */
+  /* top: 52%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
   z-index: 1;
 }
 
